/*
 * Copyright (c) Huawei Technologies Co., Ltd. 2026. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package AMCT;

message SamplerConfig {
    oneof sampler_platform{
        AscendSamplerConfig ascend_sampler_config = 1;
    }
}

message AscendSamplerConfig {
    required string soc_version = 1;
    required string input_shape = 2;
    required DistributeConfig distribute_config = 4;
    optional AtcConfig atc = 20;
}

message AtcConfig {
    repeated MapFieldEntry options = 1;
}

message MapFieldEntry {
    required string key = 1;
    required string value = 2;
}

message DistributeConfig {
    required string ip = 1;
    required string port = 2;
}