syntax = "proto2";
package AMCTPytorchDistillProto;

message AMCTDistillConfig {
    optional uint32 batch_num = 1 [default = 1];
    optional uint32 group_size = 2 [default = 1];
    optional bool data_dump = 3 [default = false];

    repeated DistillGroup distill_group = 10;
    optional DistillDataQuantConfig distill_data_quant_config = 11;
    optional DistillWeightQuantConfig distill_weight_quant_config = 12;

    repeated DistillOverrideLayer distill_override_layers = 110;
    repeated DistillOverrideLayerType distill_override_layer_types = 111;

    repeated string quant_skip_layers = 120;
    repeated string quant_skip_layer_types = 121;
}

enum DataType {
    INT4 = 0;
    INT8 = 1;
}

message DistillGroup {
    required string start_layer_name = 1;
    required string end_layer_name = 2;
}

message DistillDataQuantConfig {
    oneof data_quant_algo{
        ActULQquantize ulq_quantize = 1;
    }
}

message ActULQquantize {
    optional ClipMaxMin clip_max_min = 1;
    optional bool fixed_min = 2;
    optional DataType dst_type = 3 [default = INT8];
}

message ClipMaxMin{
    required float clip_max = 1;
    required float clip_min = 2;
}

message DistillWeightQuantConfig {
    oneof weights_quant_algo{
        ARQDistill arq_distill = 1;
        WtsULQDistill ulq_distill = 2;
    }
}

message ARQDistill {
    optional DataType dst_type = 1 [default = INT8];
    optional bool channel_wise = 2;
}

message WtsULQDistill {
    optional DataType dst_type = 1 [default = INT8];
    optional bool channel_wise = 2;
}

message DistillOverrideLayer {
    required string layer_name = 1;
    optional DistillDataQuantConfig distill_data_quant_config = 10;
    optional DistillWeightQuantConfig distill_weight_quant_config = 11;
}

message DistillOverrideLayerType {
    required string layer_type = 1;
    optional DistillDataQuantConfig distill_data_quant_config = 10;
    optional DistillWeightQuantConfig distill_weight_quant_config = 11;
}
